# CG-PROJETO

./: README.md
fase1/: CMakeLists.txt
fase1/Eng/: engine.cpp
fase1/tests/: cone_1_2_4_3.3d  sphere_1_10_10.3d
fase2/: CMakeLists.txt
fase2/Eng/: engine.cpp
fase2/tests/: plane_2_3.3d  sistema_solar.xml  sphere_10_20_20.3d  sphere_1_8_8.3d  test_1_2.xml  torus_15_14_20_20.3d
fase3/: CMakeLists.txt
fase3/Eng/: catmullrom.cpp  catmullrom.h  engine.cpp  xmlparser.cpp  xmlparser.h
fase3/tests/: sistema_solar.xml  sphere_10_20_20.3d  test_3_2.xml  torus_15_14_20_20.3d
fase4/: CMakeLists.txt
fase4/Eng/: catmullrom.cpp  engine.cpp  xmlparser.cpp  xmlparser.h
fase4/models/: bezier_10.3d  cone_1_2_4_3.3d  sphere_10_20_20.3d  sphere_1_8_8.3d  torus_15_14_20_20.3d
fase4/tests/: notes for phase IV.txt  sistema_solar_1.xml  sistema_solar_2.xml
